--- a/_posts/2009-09-03-owp17.md
+++ b/_posts/2009-09-03-owp17.md
@@ -9,7 +9,7 @@ permalink: /171/owp17/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb17.mp3
+    https://openwebpodcast.de/mp3/openweb17.mp3
     54110336
     audio/mpeg
 
@@ -17,10 +17,10 @@ enclosure:
 Es ist ein bisschen was passiert obwohl Herr Pfefferle im Urlaub weilt. Und daher haben wir uns entschlossen, eine Urlaubsfolge einzulegen und mal über all die News zu sprechen! Und diesmal schaffen wir es auch in nur 1 Stunde!
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb17.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb17.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1:00h (51,6 MB), <a href="http://openwebpodcast.de/mp3/openweb17.mp3">Download MP3</a></small>
+<small>Länge: 1:00h (51,6 MB), <a href="https://openwebpodcast.de/mp3/openweb17.mp3">Download MP3</a></small>
 
 ## Shownotes
 
