--- a/_posts/2009-10-07-owp19.md
+++ b/_posts/2009-10-07-owp19.md
@@ -9,7 +9,7 @@ permalink: /187/owp19/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb19.mp3
+    https://openwebpodcast.de/mp3/openweb19.mp3
     77801600
     audio/mpeg
 ---
@@ -19,10 +19,10 @@ Letzte Woche haben 100.000 Menschen und diejenigen, die sie eingeladen haben, ei
 Wir erklären, was Google Wave eigentlich ist und im Groben, wie es funktioniert. Wir klären auf über Waves, Wavelets, Blips, Documents, Wave Server, Wave Clients, Robots, Gadgets und embedded Waves. Oder versuchen es zumindest ;-)
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb19.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb19.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1:23h (74,1 MB), <a href="http://openwebpodcast.de/mp3/openweb19.mp3">Download MP3</a></small>
+<small>Länge: 1:23h (74,1 MB), <a href="https://openwebpodcast.de/mp3/openweb19.mp3">Download MP3</a></small>
 
 ### Die Slides zum Podcast
 
