--- a/_posts/2009-10-25-owp21.md
+++ b/_posts/2009-10-25-owp21.md
@@ -9,7 +9,7 @@ permalink: /230/owp21/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb21.mp3
+    https://openwebpodcast.de/mp3/openweb21.mp3
     70865024
     audio/mpeg
 ---
@@ -17,10 +17,10 @@ enclosure:
 Der OpenWeb-Podcast wird ein Jahr alt, wer hätte das gedacht? Wir natürlich! Daher feiern wir uns und schauen zurück. Ausserdem gibt es ganz viele Hausaufgaben für euch!
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb21.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb21.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1:16h (67,5 MB), <a href="http://openwebpodcast.de/mp3/openweb21.mp3">Download MP3</a></small>
+<small>Länge: 1:16h (67,5 MB), <a href="https://openwebpodcast.de/mp3/openweb21.mp3">Download MP3</a></small>
 
 ### Links
 
