--- a/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
+++ b/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
@@ -9,7 +9,7 @@ permalink: '/283/episode-24%e2%80%93foafssl/'
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb25.mp3
+    https://openwebpodcast.de/mp3/openweb25.mp3
     49787008
     audio/mpeg
 ---
@@ -19,10 +19,10 @@ Nach einer kleinen Abstinenz haben wir diesmal, wie versprochen, wieder ein Them
 Vielen Dank auch an [Henry Story](http://bblfish.net/), dem geistigen Schöpfer von FoaF+SSL, der uns im [IRC-Chat](http://live.openwebpodcast.de) mit Rat und Tat zur Seite stand.
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb25.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb25.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 0:55h (47.5 MB), <a href="http://openwebpodcast.de/mp3/openweb25.mp3">Download MP3</a></small>
+<small>Länge: 0:55h (47.5 MB), <a href="https://openwebpodcast.de/mp3/openweb25.mp3">Download MP3</a></small>
 
 ## News
 
