--- a/_posts/2010-04-21-owp27.md
+++ b/_posts/2010-04-21-owp27.md
@@ -9,7 +9,7 @@ permalink: /332/owp27/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb27.mp3
+    https://openwebpodcast.de/mp3/openweb27.mp3
     57059456
     audio/mpeg
 ---
@@ -19,10 +19,10 @@ Es gab mal wieder einige News, die sich so angesammelt haben. Daher also eine re
 Viel Spaß beim Hören:
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb27.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb27.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1h1m24s (57.1 MB), <a href="http://openwebpodcast.de/mp3/openweb27.mp3">Download MP3</a></small>
+<small>Länge: 1h1m24s (57.1 MB), <a href="https://openwebpodcast.de/mp3/openweb27.mp3">Download MP3</a></small>
 
 ### News
 
