--- a/_posts/2010-05-02-owp28.md
+++ b/_posts/2010-05-02-owp28.md
@@ -9,7 +9,7 @@ permalink: /337/owp28/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb28.mp3
+    https://openwebpodcast.de/mp3/openweb28.mp3
     57352320
     audio/mpeg
 ---
@@ -19,10 +19,10 @@ Wir widmen uns diesmal fast ausschließlich der [f8](http://www.facebook.com/f8)
 Viel Spaß beim Hören:
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb28.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb28.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1h2m29s (54.7 MB), <a href="http://openwebpodcast.de/mp3/openweb28.mp3">Download MP3</a></small>
+<small>Länge: 1h2m29s (54.7 MB), <a href="https://openwebpodcast.de/mp3/openweb28.mp3">Download MP3</a></small>
 
 ### News
 
