--- a/_posts/2010-05-23-owp29.md
+++ b/_posts/2010-05-23-owp29.md
@@ -9,7 +9,7 @@ permalink: /347/owp29/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb29.mp3
+    https://openwebpodcast.de/mp3/openweb29.mp3
     57905280
     audio/mpeg
 ---
@@ -17,10 +17,10 @@ enclosure:
 Es gibt mal wieder ein paar News:
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb29.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb29.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 1h02m05s (55.2 MB), <a href="http://openwebpodcast.de/mp3/openweb29.mp3">Download MP3</a></small>
+<small>Länge: 1h02m05s (55.2 MB), <a href="https://openwebpodcast.de/mp3/openweb29.mp3">Download MP3</a></small>
 
 Viel Spaß beim hören :)
 
