--- a/_posts/2010-06-05-owp30.md
+++ b/_posts/2010-06-05-owp30.md
@@ -11,7 +11,7 @@ permalink: /355/owp30/
 published: true
 enclosure:
   - |
-    http://openwebpodcast.de/mp3/openweb30.mp3
+    https://openwebpodcast.de/mp3/openweb30.mp3
     50835584
     audio/mpeg
 ---
@@ -19,10 +19,10 @@ enclosure:
 Eine kleine Einführung in OAuth 2\. Wem OAuth bisher kein Begriff ist, der kann sich ja nochmal [Episode 3](http://blog.openwebpodcast.de/35/episode-3-oauth/) anhören.
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb30.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb30.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
-<small>Länge: 0h54m40s (48.5 MB), <a href="http://openwebpodcast.de/mp3/openweb30.mp3">Download MP3</a></small>
+<small>Länge: 0h54m40s (48.5 MB), <a href="https://openwebpodcast.de/mp3/openweb30.mp3">Download MP3</a></small>
 
 Viel Spaß beim hören :)
 
