--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -8,7 +8,7 @@ layout: post
 permalink: 382/owp31/
 published: true
 enclosure:
-  - http://openwebpodcast.de/mp3/openweb31.mp3
+  - https://openwebpodcast.de/mp3/openweb31.mp3
   - 40726656
   - audio/mpeg
 ---
@@ -18,11 +18,11 @@ Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt n
 Richtig: Nichts! Also los geht's!
 
 <audio controls>
-  <source src="http://openwebpodcast.de/mp3/openweb31.mp3" type="audio/mpeg">
+  <source src="https://openwebpodcast.de/mp3/openweb31.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
 
-<small>Länge: 43m, <a href="http://openwebpodcast.de/mp3/openweb31.mp3">Download MP3</a></small>
+<small>Länge: 43m, <a href="https://openwebpodcast.de/mp3/openweb31.mp3">Download MP3</a></small>
 
 
 #### [Google vs. Facebook - Christian Ogait](http://christianogait.posterous.com/google-vs-facebook)
