--- a/_posts/2009-06-21-facebook.md
+++ b/_posts/2009-06-21-facebook.md
@@ -1,6 +1,6 @@
 ---
 ID: 24
-post_title: 'Episode 12 &#8211; Facebook'
+post_title: 'Episode 12 - Facebook'
 author: Matthias Pfefferle
 post_date: 2009-06-21 17:09:00
 post_excerpt: ""
