--- a/_posts/2009-09-03-owp17.md
+++ b/_posts/2009-09-03-owp17.md
@@ -1,6 +1,6 @@
 ---
 ID: 171
-post_title: 'Episode 17 &#8211; Ein Nachrichtenüberblick'
+post_title: 'Episode 17 - Ein Nachrichtenüberblick'
 author: Christian Scholz
 post_date: 2009-09-03 20:18:19
 post_excerpt: ""
