--- a/_posts/2009-09-30-owp18.md
+++ b/_posts/2009-09-30-owp18.md
@@ -1,6 +1,6 @@
 ---
 ID: 177
-post_title: 'Episode 18 &#8211; Offenes Deutschland?'
+post_title: 'Episode 18 - Offenes Deutschland?'
 author: Christian Scholz
 post_date: 2009-09-30 16:11:29
 post_excerpt: ""
