--- a/_posts/2009-10-07-owp19.md
+++ b/_posts/2009-10-07-owp19.md
@@ -1,6 +1,6 @@
 ---
 ID: 187
-post_title: 'Episode 19 &#8211; Die Google-Welle'
+post_title: 'Episode 19 - Die Google-Welle'
 author: Christian Scholz
 post_date: 2009-10-07 12:16:24
 post_excerpt: ""
