--- a/_posts/2009-10-25-owp21.md
+++ b/_posts/2009-10-25-owp21.md
@@ -1,6 +1,6 @@
 ---
 ID: 230
-post_title: 'Episode 21 &#8211; Happy Birthday! Wir werden ein Jahr alt!'
+post_title: 'Episode 21 - Happy Birthday! Wir werden ein Jahr alt!'
 author: Christian Scholz
 post_date: 2009-10-25 16:44:23
 post_excerpt: ""
