--- a/_posts/2009-12-24-owp23.md
+++ b/_posts/2009-12-24-owp23.md
@@ -1,6 +1,6 @@
 ---
 ID: 244
-post_title: 'Episode 23 &#8211; Frohe Weihnachten'
+post_title: 'Episode 23 - Frohe Weihnachten'
 author: Christian Scholz
 post_date: 2009-12-24 09:00:11
 post_excerpt: ""
