--- a/_posts/2010-05-23-owp29.md
+++ b/_posts/2010-05-23-owp29.md
@@ -1,6 +1,6 @@
 ---
 ID: 347
-post_title: 'Episode 29 &#8211; OpenWebNews'
+post_title: 'Episode 29 - OpenWebNews'
 author: Matthias Pfefferle
 post_date: 2010-05-23 17:29:51
 post_excerpt: ""
