--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -1,6 +1,6 @@
 ---
 ID: 382
-post_title: 'Episode 31 &#8211; Diaspora'
+post_title: 'Episode 31 - Diaspora'
 author: Christian Scholz
 post_date: 2010-12-03 22:25:26
 post_excerpt: ""
